force-app/main/default/objects/Employee_Activity__c/Employee_Activity__c.object-meta.xml
<CustomObject>
    <label>Employee Activity</label>
    <nameField>
        <displayFormat>EA-{0000}</displayFormat>
        <label>Employee Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Activitys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>