force-app/main/default/objects/Employee_Activity__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee_Joined</fullName>
                <label>Employee Joined</label>
            </value>
            <value>
                <fullName>Employee Onborded</fullName>
            </value>
            <value>
                <fullName>On Notice Period</fullName>
            </value>
            <value>
                <fullName>Employee Deboarded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>