force-app/main/default/objects/Employee_Activity__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee_Information__c</referenceTo>
    <relationshipLabel>Employee Activitys</relationshipLabel>
    <relationshipName>Employee_Activitys</relationshipName>
    <type>Lookup</type>
</CustomField>